[gd_scene load_steps=7 format=3 uid="uid://immx7fc5ylig"]

[ext_resource type="Theme" uid="uid://du4xhpvf3ifj2" path="res://menu/base_theme.tres" id="1_iqcrq"]
[ext_resource type="Script" uid="uid://dg54ibyrc4fsu" path="res://menu/credits_scene.gd" id="2_t1xmo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1xmo"]

[sub_resource type="InputEventKey" id="InputEventKey_t1xmo"]
device = -1
keycode = 4194305

[sub_resource type="InputEventKey" id="InputEventKey_ivkt0"]
device = -1
keycode = 4194308

[sub_resource type="Shortcut" id="Shortcut_x26cq"]
events = [SubResource("InputEventKey_t1xmo"), SubResource("InputEventKey_ivkt0")]

[node name="CreditsScene" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iqcrq")
script = ExtResource("2_t1xmo")
button_base_color = Color(1, 1, 1, 1)
button_hover_color = Color(1, 0, 0.966667, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.133333, 0.137255, 0.137255, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
bbcode_enabled = true
text = "[b][font_size=32]Snekoban[/font_size][/b]





A game  by
[color=a5edff]Blessed Sleep Studio[/color]
with music and sounds by
[color=a5edff]Farlgerann[/color]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Return" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_t1xmo")
shortcut = SubResource("Shortcut_x26cq")
text = "return"
flat = true
alignment = 0

[connection signal="focus_entered" from="MarginContainer/Return" to="." method="_on_return_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/Return" to="." method="_on_return_focus_exited"]
[connection signal="pressed" from="MarginContainer/Return" to="." method="_on_return_pressed"]
